Them ticket, chinh sua header login