@@ -1,13 +1,9 @@
 package com.uef.controller.user;
 
 import com.uef.model.*;
-import com.uef.service.CategoryService;
 import com.uef.service.EventService;
-import com.uef.service.TicketService;
 import com.uef.service.UserService;
-import com.uef.utils.Image;
 import jakarta.annotation.PostConstruct;
-import jakarta.servlet.http.HttpSession;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -19,7 +15,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.OptionalInt;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.validation.BindingResult;
@@ -31,25 +26,34 @@ public class EventController {
     @Autowired
     private EventService eventService;
 
-    @Autowired
-    private CategoryService categoryService;
-
-    @Autowired
-    private TicketService ticketService;
-
     private static final Logger logger = LoggerFactory.getLogger(EventController.class);
+
+    private List<EVENT> events;
+
+    public EventController() {
+
+    }
 
     @GetMapping("/")
     public String home(Model model,
             @RequestParam(value = "keyword", required = false) String keyword,
-            @RequestParam(value = "category", required = false) String category,
-            @RequestParam(value = "date", required = false) Date date,
-            HttpSession session) {
-        // Sửa lỗi logic: sử dụng keyword cho name, bỏ category để tránh lỗi kiểu dữ liệu
-        List<String> categories = categoryService.getAll().stream()
-                .map(CATEGORY::getName)
-                .collect(Collectors.toList());
-        List<EVENT> filteredEvents = eventService.searchEvents(keyword, category, date);
+            @RequestParam(value = "category", required = false) String category) {
+        events = eventService.getAll();
+        List<String> categories = events.stream()
+                .map(EVENT::getType)
+                .distinct()
+                .toList();
+        List<EVENT> filteredEvents = new ArrayList<>(events);
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            filteredEvents = filteredEvents.stream()
+                    .filter(e -> e.getName().toLowerCase().contains(keyword.toLowerCase()))
+                    .toList();
+        }
+        if (category != null && !category.isEmpty()) {
+            filteredEvents = filteredEvents.stream()
+                    .filter(e -> e.getType().equals(category))
+                    .toList();
+        }
         model.addAttribute("events", filteredEvents);
         model.addAttribute("categories", categories);
         model.addAttribute("userForm", new USER());
@@ -67,26 +71,25 @@ public class EventController {
         if (event == null) {
             return "error/404"; // Return 404 page if event not found
         }
-        ORGANIZER organizer = event.getOrganizer();
-        List<TICKET> tickets = event.getTickets();
 
         // Calculate total slots
         int totalSlots = 50;
 
-        // Add attributes to model
-        model.addAttribute("body", "/WEB-INF/views/user/events/details.jsp");
+        // Get first ticket price (if available)
+        double firstTicketPrice = event.getTickets().isEmpty() ? 0 : event.getTickets().get(0).getPrice();
+
+        // Get first ticket deadline (if available)
+        String firstTicketDeadline = event.getTickets().isEmpty() ? null
+                : event.getTickets().get(0).getRegDeadline() != null
+                ? event.getTickets().get(0).getRegDeadline().toString()
+                : null;
+
+        model.addAttribute("body", "/WEB-INF/views/user/events/details.jsp"); // Chỉ thêm một lần
         model.addAttribute("event", event);
-        //Ảnh dạng string base64 để up ảnh lên jsp
-        model.addAttribute("event_image", Image.convertByteToBase64(event.getImage()));
-        model.addAttribute("organizer", organizer);
-        //Ảnh dạng string base64 để up ảnh lên jsp
-        model.addAttribute("organizer_avatar", Image.convertByteToBase64(organizer.getAvatar()));
-        model.addAttribute("tickets", tickets);
         model.addAttribute("totalSlots", totalSlots);
+        model.addAttribute("firstTicketPrice", firstTicketPrice);
+        model.addAttribute("firstTicketDeadline", firstTicketDeadline);
         model.addAttribute("userForm", new USER());
-        //model.addAttribute("body", "/WEB-INF/views/user/events/details.jsp");
-        //model.addAttribute("advantage", "/WEB-INF/views/layout/benefit.jsp");
-        //model.addAttribute("introPicture", "/WEB-INF/assets/img/hero.jpg");
         return "layout/main";
     }
 
@@ -97,6 +100,39 @@ public class EventController {
         model.addAttribute("advantage", "/WEB-INF/views/layout/benefit.jsp");
         model.addAttribute("introPicture", "/WEB-INF/assets/img/hero.jpg");
         return "layout/main";
+    }
+
+    @GetMapping("/user-page")
+    public String showMain2(Model model,
+            @RequestParam(value = "keyword", required = false) String keyword,
+            @RequestParam(value = "category", required = false) String category) {
+        List<EVENT> events = eventService.getAll();
+        List<String> categories = events.stream()
+                .map(EVENT::getType)
+                .distinct()
+                .toList();
+
+        List<EVENT> filteredEvents = new ArrayList<>(events);
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            filteredEvents = filteredEvents.stream()
+                    .filter(e -> e.getName().toLowerCase().contains(keyword.toLowerCase()))
+                    .toList();
+        }
+        if (category != null && !category.isEmpty()) {
+            filteredEvents = filteredEvents.stream()
+                    .filter(e -> e.getType().equals(category))
+                    .toList();
+        }
+
+        model.addAttribute("events", filteredEvents);
+        model.addAttribute("categories", categories);
+        model.addAttribute("userForm", new USER());
+        model.addAttribute("hero", "/WEB-INF/views/layout/hero.jsp");
+        model.addAttribute("body", "/WEB-INF/views/user/events/list.jsp");
+        model.addAttribute("advantage", "/WEB-INF/views/layout/benefit.jsp");
+        model.addAttribute("introPicture", "/WEB-INF/assets/img/hero.jpg");
+
+        return "layout/main2";
     }
 
 
